fix image management page has much bottom spacing and using wrong footer buttons

--- a/assets/_form.sass
+++ b/assets/_form.sass
@@ -19,6 +19,7 @@ form
 
 .ah-form
 	@extend .form-horizontal
+	@include clearfix
 
 	.control-padding-top
 		padding-top: ($padding-base-vertical + 1) // Default padding plus a border
