--- a/public/assets/css/screen.css
+++ b/public/assets/css/screen.css
@@ -13133,116 +13133,125 @@ form h6 {
   font-size: 12px;
 }
 
-/* line 23, ../../../assets/_form.sass */
+/* line 14, ../../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_clearfix.scss */
+.ah-form:before, .ah-form:after {
+  content: " ";
+  display: table;
+}
+/* line 19, ../../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_clearfix.scss */
+.ah-form:after {
+  clear: both;
+}
+/* line 24, ../../../assets/_form.sass */
 .ah-form .control-padding-top {
   padding-top: 7px;
 }
-/* line 26, ../../../assets/_form.sass */
+/* line 27, ../../../assets/_form.sass */
 .ah-form .form-group {
   margin-left: 30px;
   margin-right: 30px;
   margin-bottom: 15px;
 }
-/* line 32, ../../../assets/_form.sass */
+/* line 33, ../../../assets/_form.sass */
 .ah-form .form-group.form-group-closer {
   margin-top: -5px;
   margin-bottom: 20px;
 }
-/* line 38, ../../../assets/_form.sass */
+/* line 39, ../../../assets/_form.sass */
 .ah-form .form-group .width-label {
   width: 170px;
   padding-left: 0;
   padding-right: 0;
 }
-/* line 43, ../../../assets/_form.sass */
+/* line 44, ../../../assets/_form.sass */
 .ah-form .form-group .width-label > * {
   float: right;
 }
-/* line 45, ../../../assets/_form.sass */
+/* line 46, ../../../assets/_form.sass */
 .ah-form .form-group .width-field-small {
   width: 300px;
 }
-/* line 48, ../../../assets/_form.sass */
+/* line 49, ../../../assets/_form.sass */
 .ah-form .form-group .width-field-normal {
   width: 400px;
 }
-/* line 51, ../../../assets/_form.sass */
+/* line 52, ../../../assets/_form.sass */
 .ah-form .form-group .width-field-large {
   width: 500px;
 }
-/* line 54, ../../../assets/_form.sass */
+/* line 55, ../../../assets/_form.sass */
 .ah-form .form-group .width-field-xl {
   width: 600px;
 }
-/* line 57, ../../../assets/_form.sass */
+/* line 58, ../../../assets/_form.sass */
 .ah-form .form-group .width-field-xxl {
   width: 700px;
 }
-/* line 60, ../../../assets/_form.sass */
+/* line 61, ../../../assets/_form.sass */
 .ah-form .form-group .width-field-tooltip {
   width: 24px;
   height: 34px;
   line-height: 34px;
 }
-/* line 65, ../../../assets/_form.sass */
+/* line 66, ../../../assets/_form.sass */
 .ah-form .form-group .width-field-tooltip > * {
   vertical-align: middle;
 }
-/* line 67, ../../../assets/_form.sass */
+/* line 68, ../../../assets/_form.sass */
 .ah-form .form-group .width-field-tooltip.no-padding-left {
   padding-left: 0;
 }
-/* line 69, ../../../assets/_form.sass */
+/* line 70, ../../../assets/_form.sass */
 .ah-form .form-group .button-size-normal {
   width: 120px;
 }
-/* line 72, ../../../assets/_form.sass */
+/* line 73, ../../../assets/_form.sass */
 .ah-form .form-group .button-size-large {
   width: 200px;
 }
-/* line 76, ../../../assets/_form.sass */
+/* line 77, ../../../assets/_form.sass */
 .ah-form .form-group-link-action .form-text {
   padding-top: 0;
 }
-/* line 79, ../../../assets/_form.sass */
+/* line 80, ../../../assets/_form.sass */
 .ah-form .form-text {
   display: inline-block;
   max-width: 100%;
 }
-/* line 84, ../../../assets/_form.sass */
+/* line 85, ../../../assets/_form.sass */
 .ah-form .help-block {
   margin-bottom: 0;
   font-size: 11px;
 }
-/* line 88, ../../../assets/_form.sass */
+/* line 89, ../../../assets/_form.sass */
 .ah-form .main-form-action {
   padding-top: 15px;
   padding-bottom: 15px;
   border-top: 1px solid #BCC7D5;
 }
-/* line 94, ../../../assets/_form.sass */
+/* line 95, ../../../assets/_form.sass */
 .ah-form .radio.multiline > label, .ah-form .checkbox.multiline > label {
   padding-top: 7px;
   display: block;
 }
-/* line 97, ../../../assets/_form.sass */
+/* line 98, ../../../assets/_form.sass */
 .ah-form .radio.multiline > label:first-child, .ah-form .checkbox.multiline > label:first-child {
   padding-top: 0;
 }
-/* line 100, ../../../assets/_form.sass */
+/* line 101, ../../../assets/_form.sass */
 .ah-form .radio.multiple-radio > label {
   margin-right: 15px;
 }
-/* line 103, ../../../assets/_form.sass */
+/* line 104, ../../../assets/_form.sass */
 .ah-form .checkbox.multiple-checkbox > label {
   margin-right: 15px;
 }
-/* line 107, ../../../assets/_form.sass */
+/* line 108, ../../../assets/_form.sass */
 .ah-form a.required, .ah-form span.required, .ah-form label.required {
   position: relative;
   display: inline-block;
 }
-/* line 110, ../../../assets/_form.sass */
+/* line 111, ../../../assets/_form.sass */
 .ah-form a.required:after, .ah-form span.required:after, .ah-form label.required:after {
   display: block;
   content: "*";
@@ -13253,19 +13262,19 @@ form h6 {
   font-size: 16px;
   line-height: 1;
 }
-/* line 120, ../../../assets/_form.sass */
+/* line 121, ../../../assets/_form.sass */
 .ah-form .main-form-action .btn ~ .btn {
   margin-left: 10px;
 }
-/* line 123, ../../../assets/_form.sass */
+/* line 124, ../../../assets/_form.sass */
 .ah-form .input-with-unit {
   position: relative;
 }
-/* line 125, ../../../assets/_form.sass */
+/* line 126, ../../../assets/_form.sass */
 .ah-form .input-with-unit input.form-control {
   padding-right: 50px;
 }
-/* line 127, ../../../assets/_form.sass */
+/* line 128, ../../../assets/_form.sass */
 .ah-form .input-with-unit .input-unit {
   position: absolute;
   right: 7px;
@@ -13273,7 +13282,7 @@ form h6 {
   color: #BCC7D5;
   pointer-events: none;
 }
-/* line 135, ../../../assets/_form.sass */
+/* line 136, ../../../assets/_form.sass */
 .ah-form .multiple-input {
   margin-left: -7px;
   margin-right: -8px;
@@ -13287,7 +13296,7 @@ form h6 {
 .ah-form .multiple-input:after {
   clear: both;
 }
-/* line 139, ../../../assets/_form.sass */
+/* line 140, ../../../assets/_form.sass */
 .ah-form .multiple-input .input-column {
   position: relative;
   float: left;
@@ -13297,23 +13306,23 @@ form h6 {
   padding-right: 7.5px;
   width: 120px;
 }
-/* line 140, ../../../assets/_form.sass */
+/* line 141, ../../../assets/_form.sass */
 .ah-form .multiple-input .input-column > label {
   padding-top: 7px;
 }
-/* line 142, ../../../assets/_form.sass */
+/* line 143, ../../../assets/_form.sass */
 .ah-form .multiple-input .input-column.no-label {
   padding-top: 31px;
 }
-/* line 148, ../../../assets/_form.sass */
+/* line 149, ../../../assets/_form.sass */
 .ah-form .multiple-input .input-column.input-xl {
   width: 150px;
 }
-/* line 151, ../../../assets/_form.sass */
+/* line 152, ../../../assets/_form.sass */
 .ah-form .multiple-input .input-column.input-xxl {
   width: 200px;
 }
-/* line 157, ../../../assets/_form.sass */
+/* line 158, ../../../assets/_form.sass */
 .ah-form select.form-control {
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -13322,15 +13331,15 @@ form h6 {
   background-image: url("/assets/img/dropdown.png");
   background-size: 9px 6px;
 }
-/* line 164, ../../../assets/_form.sass */
+/* line 165, ../../../assets/_form.sass */
 .ah-form .ah-select2-dropdown {
   width: 100%;
 }
-/* line 167, ../../../assets/_form.sass */
+/* line 168, ../../../assets/_form.sass */
 .ah-form.sticky-mainform-action {
   padding-bottom: 64px;
 }
-/* line 169, ../../../assets/_form.sass */
+/* line 170, ../../../assets/_form.sass */
 .ah-form.sticky-mainform-action .main-form-action {
   position: fixed;
   bottom: 0;
